--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -2,19 +2,19 @@
   display: inline-block;
   vertical-align: top;
   width: 100%;
-  height: 32px;
+  height: 50px;
   margin-bottom: 20px;
-  padding: 5px 12px;
+  padding: 12px 24px;
   border: 1px solid $color-gray-20;
-  box-shadow: inset 0 0 10px 0 rgba(215, 215, 217, .35);
-  border-radius: 5px;
+  box-shadow: none;
+  border-radius: 40px;
   background-color: $color-white;
-  font-size: $font_default;
+  font-size: 14px;
   color: $font-color_dark;
   
   &:focus {
     outline: 0;
-    border-color: $color-blue-30;
+    border-color: #EC008C;
   }
 
   &[disabled] {
