--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,6 +22,7 @@
 @import "blocks/_slick-theme.scss";
 @import "blocks/_hamburger.scss";
 @import "blocks/_menu-mobile.scss";
+@import "blocks/_popup.scss";
 
 //don't move
 @import "dev/_helpers.scss";
